Restructure tags for cleanup procedure

--- a/skale-nodes/ansible/cleanup_nodes.yaml
+++ b/skale-nodes/ansible/cleanup_nodes.yaml
@@ -2,4 +2,6 @@
   hosts: nodes
   become: true
   roles:
-    - role: cleanup_nodes
+    - name: Remove all skale software from node
+      role: cleanup_nodes
+      tags: cleanup
