Removed update and base yaml, added contracts cleanup

--- a/skale-nodes/ansible/register_again.yaml
+++ b/skale-nodes/ansible/register_again.yaml
@@ -1,6 +1,5 @@
+- import_playbook: cleanup_contracts.yaml
 - import_playbook: cleanup_nodes.yaml
-- import_playbook: update.yaml
-- import_playbook: base.yaml
 - import_playbook: setup.yaml
 - import_playbook: validator.yaml
 - import_playbook: signature.yaml
