--- a/skale-nodes/ansible/roles/base_provision/tasks/main.yaml
+++ b/skale-nodes/ansible/roles/base_provision/tasks/main.yaml
@@ -1,3 +1,13 @@
+- name: Add ssh keys
+  authorized_key:
+    user: ubuntu
+    state: present
+    key: "{{ lookup('file', '{{ item }}') }}"
+
+  with_fileglob: "ssh-keys/*"
+  tags:
+    ssh
+
 - import_tasks: swap.yaml
   tags: swap
 
@@ -17,19 +27,6 @@
     value: "1000000000"
   tags: ulimits
 
-- name: Update pip
-  pip:
-    name: pip
-    state: latest
-
-- name: Install cryptography 36
-  pip:
-    name: "cryptography==36"
-
-
-- name: Install aptitude
-  apt: name=aptitude state=latest update_cache=yes force_apt_get=yes
-
 - name: Install packages
   apt: name={{ item }} update_cache=yes state=latest
   loop: [
@@ -41,6 +38,7 @@
     "python3-setuptools",
     "python3-dev",
     "iptables-persistent"
+    "python3-pip"
     ]
   tags: apt
 
@@ -48,28 +46,16 @@
   tags:
     docker
 
+- name: Update pip
+  pip:
+    name: pip
+    state: latest
+
 - name: Install docker.py
   pip:
-    name: docker==4.2.0
+    requirements: files/remote-requirements.txt
   tags:
     pip
-
-- name: Install docker-compose
-  pip:
-    name: docker-compose==1.27.4
-  tags:
-    - pip
-    - docker-compose
-
-- name: Add ssh keys
-  authorized_key:
-    user: ubuntu
-    state: present
-    key: "{{ lookup('file', '{{ item }}') }}"
-
-  with_fileglob: "ssh-keys/*"
-  tags:
-    ssh
 
 - name: Enable timedatectl
   shell: sudo timedatectl set-ntp on
