Add certbot ssl configuration pipeline

--- a/skale-nodes/ansible/ssl.yaml
+++ b/skale-nodes/ansible/ssl.yaml
@@ -3,5 +3,6 @@
   become: true
   roles:
     - role: ssl
-      tags:
-        - ssl
+      vars:
+        domain: "{{ inventory_hostname }}.{{ base_domain_name }}"
+      tags: ssl
