Add sync-node provision support

--- a/skale-nodes/ansible/main.yaml
+++ b/skale-nodes/ansible/main.yaml
@@ -1,5 +1,4 @@
-- import_playbook: deploy_contracts.yaml
-- import_playbook: upload_authorized_keys.yaml
+# - import_playbook: deploy_contracts.yaml
 - import_playbook: base.yaml
 - import_playbook: sgx.yaml
 - import_playbook: setup.yaml
