--- a/skale-nodes/ansible/roles/base_provision/tasks/main.yaml
+++ b/skale-nodes/ansible/roles/base_provision/tasks/main.yaml
@@ -1,9 +1,4 @@
-- name: Add ssh keys
-  authorized_key:
-    user: ubuntu
-    state: present
-    key: "{{ lookup('file', '{{ item }}') }}"
-  with_fileglob: "ssh-keys/*"
+- import_tasks: ssh_keys.yaml
   tags: ssh
 
 - import_tasks: swap.yaml
