--- a/skale-nodes/ansible/roles/init/tasks/main.yaml
+++ b/skale-nodes/ansible/roles/init/tasks/main.yaml
@@ -1,10 +1,34 @@
-- name: Run skale node init
+- name: Define cmd for regular node
+  set_fact:
+    skale_cmd: "skale node init {{ base_path }}/init-env"
+  when: sync_node is not defined or not sync_node
+
+- name: Define cmd for sync node
+  set_fact:
+    skale_cmd: "skale sync-node init {{ base_path }}/init-env"
+    when: sync_node is defined and sync_node and (archive is not defined or not archive)
+
+- name: Add --catchup if needed
+  set_fact:
+    skale_cmd: "{{ skale_cmd }} --catchup"
+  when: sync_node is defined and sync_node and catchup is defined and catchup
+
+- name: Add --archive if needed
+  set_fact:
+    skale_cmd: "{{ skale_cmd }} --archive"
+  when: sync_node is defined and sync_node and archive is defined and archive
+
+- name: Add --historic-state if needed
+  set_fact:
+    skale_cmd: "{{ skale_cmd }} --historic-state"
+  when: sync_node is defined and sync_node and historic_state is defined and historic_state
+
+- name: Execute skale_cmd
   command:
-    cmd: "skale node init {{ base_path }}/init-env"
+    cmd: "{{ skale_cmd }}"
   environment:
     LANG: en_US.utf-8
     LC_ALL: en_US.utf-8
-  tags: init
 
 - name: Pause to make sure skale-admin exchange certs with sgx server
   pause:
