--- a/skale-nodes/ansible/validator.yaml
+++ b/skale-nodes/ansible/validator.yaml
@@ -2,7 +2,7 @@
   hosts: 127.0.0.1
   connection: local
   tasks:
-    - name: Perform validators for nodes generation
+    - name: Generate and configure validator
       import_role:
         name: validators
         tasks_from: generate
