--- a/bare-metal/ansible/roles/restart_script/tasks/generate_script.yml
+++ b/bare-metal/ansible/roles/restart_script/tasks/generate_script.yml
@@ -4,7 +4,7 @@
   environment:
     BASE_DIR: "files"
     NUM_OF_VMS: "{{ num_of_vms }}"
-    BASE_NAME: "{{ vm_base_name }}"
+    VM_BASE_NAME: "{{ vm_base_name }}"
     BASE_PATH: "{{ base_path }}"
   args:
     executable: python3
