Add schains backup tasks

--- a/skale-nodes/ansible/backup.yaml
+++ b/skale-nodes/ansible/backup.yaml
@@ -3,18 +3,6 @@
   vars:
     - ip_address: "{{ hostvars[inventory_hostname].ansible_host }}"
 
-  tasks:
-    - name: Backup node
-      include_role:
-        name: backup
-        apply:
-          tags: node
+  roles:
+    - backup
 
-    - name: Save AMI
-      include_role:
-        name: aws
-        tasks_from: backup
-        apply:
-          tags: aws
-      tags:
-        aws
