--- a/skale-nodes/ansible/roles/node_backup/tasks/node.yaml
+++ b/skale-nodes/ansible/roles/node_backup/tasks/node.yaml
@@ -40,7 +40,7 @@
 - name: Download backup archive
   fetch:
     src: "{{ (backup_files.files | sort(attribute='mtime', reverse=true) | first).path }}"
-    dest: "files/node-backup/{{ inventory_hostname }}/backup.tar.gz"
+    dest: "files/node-backup/{{ inventory_hostname }}/"
     patterns: "skale-node*"
     flat: yes
 
