Add node_restore role. Fix node backup

--- a/skale-nodes/ansible/restore_node.yaml
+++ b/skale-nodes/ansible/restore_node.yaml
@@ -1,8 +1,8 @@
-- name: Restore node from AMI
+- name: Restore node from backup tarball
   hosts: nodes
   vars:
     - ip_address: "{{ hostvars[inventory_hostname].ansible_host }}"
 
   roles:
-    - role: restore
-      tags: restore
+    - role: node_restore
+      tags: restore_node
