--- a/skale-nodes/ansible/roles/node_restore/tasks/node.yaml
+++ b/skale-nodes/ansible/roles/node_restore/tasks/node.yaml
@@ -1,5 +1,3 @@
-- debug: msg="{{ no_containers }}"
-
 - name: Lookup backupfile
   delegate_to: localhost
   find:
@@ -25,32 +23,21 @@
     src: "artifacts/node-backup/{{ inventory_hostname }}/init-env"
     dest: "{{ base_path }}/init-env"
 
-- name: Compose cmd for restoring from remote snapshot
+- name: Compose regular cmd
   set_fact:
     cmd: "skale node restore {{ base_path }}/backup.tar.gz {{ base_path }}/init-env"
+  when: config_only is not defined or not config_only
 
-- name: Compose cmd for restoring from local snapshot
+- name: Compose cmd with config only
   set_fact:
-    cmd: "skale node restore {{ base_path }}/backup.tar.gz {{ base_path }}/init-env"
-
-- name: Add NO_CONTAINERS option
-  lineinfile:
-    path: "{{ base_path }}/init-env"
-    line: "NO_CONTAINERS=True"
-  when: no_containers is defined and no_containers == True
+    cmd: "skale node restore --config-only {{ base_path }}/backup.tar.gz {{ base_path }}/init-env"
+  when: config_only is defined and config_only
 
 - name: Run skale node restore
   shell:
-    cmd: "skale node restore {{ base_path }}/backup.tar.gz {{ base_path }}/init-env"
+    cmd: "{{ cmd }}"
   environment:
     LANG: en_US.utf-8
     LC_ALL: en_US.utf-8
     HOME_DIR: "{{ base_path }}"
     tags: skale_restore
-
-- name: Remove NO_CONTAINERS option
-  lineinfile:
-    path: "{{ base_path }}/init-env"
-    line: "NO_CONTAINERS=True"
-    state: absent
-  when: no_containers is defined and no_containers == True
