--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
 [submodule "helper-scripts"]
 	path = helper-scripts
-	url = https://github.com/skalenetwork/helper-scripts.git
-	branch = develop
+	url = git@github.com:skalenetwork/helper-scripts.git
